--- a/Tesis_UN.ipynb
+++ b/Tesis_UN.ipynb
@@ -69,19 +69,16 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "# Cargar los archivos\n",
-    "archivo_principal = \"C:/tesis/Consulta Externa 2021.csv\"  # Cambia por el nombre de tu archivo CSV\n",
-    "archivo_enfermedades = \"C:/tesis/top50_enf.xlsx\"  # Cambia por el nombre de tu archivo Excel\n",
+    "archivo_principal = \"C:/tesis/Consulta Externa 2021.csv\"\n",
+    "archivo_enfermedades = \"C:/tesis/top50_enf.xlsx\"\n",
     "\n",
-    "# Leer el archivo CSV con manejo de errores\n",
     "try:\n",
-    "    # Intentar leer el archivo con detección automática de delimitadores\n",
     "    df_principal = pd.read_csv(\n",
     "        archivo_principal,\n",
     "        encoding=\"utf-8\",\n",
-    "        sep=None,  # Detectar automáticamente el delimitador\n",
+    "        sep=None,\n",
     "        engine=\"python\",\n",
-    "        on_bad_lines=\"skip\"  # Omitir líneas malformadas\n",
+    "        on_bad_lines=\"skip\"\n",
     "    )\n",
     "    print(\"Archivo CSV cargado exitosamente.\")\n",
     "    print(f\"Primeras filas del archivo:\\n{df_principal.head()}\")\n",
@@ -95,15 +92,13 @@
     "    print(f\"Error inesperado al leer el archivo principal: {e}\")\n",
     "    exit(1)\n",
     "\n",
-    "# Leer el archivo Excel\n",
     "try:\n",
-    "    df_enfermedades = pd.read_excel(archivo_enfermedades, sheet_name=0)  # Ajusta el sheet_name si es necesario\n",
+    "    df_enfermedades = pd.read_excel(archivo_enfermedades, sheet_name=0)\n",
     "    print(\"Archivo Excel cargado exitosamente.\")\n",
     "except Exception as e:\n",
     "    print(f\"Error al leer el archivo de enfermedades: {e}\")\n",
     "    exit(1)\n",
     "\n",
-    "# Normalizar las columnas de código para evitar inconsistencias\n",
     "if 'CODIGO_CIE10_1' in df_principal.columns and 'CODIGO_CIE10_1' in df_enfermedades.columns:\n",
     "    df_principal['CODIGO_CIE10_1'] = df_principal['CODIGO_CIE10_1'].astype(str).str.strip().str.upper()\n",
     "    df_enfermedades['CODIGO_CIE10_1'] = df_enfermedades['CODIGO_CIE10_1'].astype(str).str.strip().str.upper()\n",
@@ -111,20 +106,18 @@
     "    print(\"Error: No se encontraron las columnas 'CODIGO_CIE10_1' en uno de los archivos.\")\n",
     "    exit(1)\n",
     "\n",
-    "# Unir los datos para agregar las columnas de tratamientos\n",
     "try:\n",
     "    df_merge = pd.merge(\n",
     "        df_principal,\n",
     "        df_enfermedades[['CODIGO_CIE10_1', 'TRATAMIENTO 1', 'TRATAMIENTO 2', 'TRATAMIENTO 3']],\n",
     "        on='CODIGO_CIE10_1',\n",
-    "        how='inner'  # Solo conserva las enfermedades que están en el top 50\n",
+    "        how='inner'\n",
     "    )\n",
     "    print(\"Unión de datos completada.\")\n",
     "except KeyError as e:\n",
     "    print(f\"Error al realizar la unión de datos: {e}\")\n",
     "    exit(1)\n",
     "\n",
-    "# Guardar el resultado en un nuevo archivo CSV\n",
     "archivo_resultante = \"consultas_externas_actualizado.csv\"\n",
     "try:\n",
     "    df_merge.to_csv(archivo_resultante, index=False, encoding=\"utf-8\")\n",
@@ -200,7 +193,6 @@
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "import seaborn as sns\n",
     "\n",
-    "# Conexión a la base de datos MySQL\n",
     "conn = mysql.connector.connect(\n",
     "    host='localhost',\n",
     "    user='root',\n",
@@ -210,7 +202,6 @@
     "\n",
     "cursor = conn.cursor()\n",
     "\n",
-    "# Consulta SQL optimizada para obtener datos\n",
     "query = \"\"\"\n",
     "SELECT\n",
     "    COUNT(*) AS total_pacientes,\n",
@@ -227,17 +218,11 @@
     "    ZONA, PROVINCIA, trimestre, DESCRIPCION_CIE10_1\n",
     "\"\"\"\n",
     "\n",
-    "# Cargar los datos en un DataFrame\n",
     "df = pd.read_sql(query, conn)\n",
     "\n",
-    "# Preprocesamiento: variables categóricas y numéricas\n",
-    "# Convertir variables categóricas con OneHotEncoder\n",
-    "categorical_cols = ['ZONA', 'PROVINCIA', 'enfermedad']  # Aquí incluirías más variables si es necesario\n",
-    "\n",
-    "# Escalado de las variables numéricas\n",
+    "categorical_cols = ['ZONA', 'PROVINCIA', 'enfermedad']\n",
     "numerical_cols = ['total_pacientes']\n",
     "\n",
-    "# Crear transformaciones para cada tipo de columna\n",
     "preprocessor = ColumnTransformer(\n",
     "    transformers=[\n",
     "        ('num', StandardScaler(), numerical_cols),\n",
@@ -245,26 +230,19 @@
     "    ]\n",
     ")\n",
     "\n",
-    "# Entrenamiento: Filtrar los datos de entrada y de salida\n",
-    "X = df[['total_pacientes', 'ZONA', 'PROVINCIA', 'enfermedad']]  # Asegúrate de incluir todas las variables necesarias\n",
-    "y = df[['num_tratamientos_1', 'num_tratamientos_2', 'num_tratamientos_3']]  # Etiquetas de predicción\n",
+    "X = df[['total_pacientes', 'ZONA', 'PROVINCIA', 'enfermedad']]\n",
+    "y = df[['num_tratamientos_1', 'num_tratamientos_2', 'num_tratamientos_3']]\n",
     "\n",
-    "# Aplicar preprocesamiento\n",
     "X_processed = preprocessor.fit_transform(X)\n",
     "\n",
-    "# Dividir los datos en entrenamiento y prueba\n",
     "X_train, X_test, y_train, y_test = train_test_split(X_processed, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# Definir el modelo de regresión\n",
     "model = RandomForestRegressor(n_estimators=300, max_depth=20, random_state=42)\n",
     "\n",
-    "# Entrenar el modelo\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# Predicción en los datos de prueba\n",
     "predicciones = model.predict(X_test)\n",
     "\n",
-    "# Calcular métricas de validación\n",
     "mse = mean_squared_error(y_test, predicciones)\n",
     "rmse = np.sqrt(mse)\n",
     "r2 = r2_score(y_test, predicciones)\n",
@@ -273,13 +251,10 @@
     "print(f'Root Mean Squared Error (RMSE): {rmse}')\n",
     "print(f'R²: {r2}')\n",
     "\n",
-    "# Configuración general para que las gráficas sean más elegantes\n",
     "sns.set_theme(style=\"whitegrid\", palette=\"muted\")\n",
     "\n",
-    "# Colores para las gráficas\n",
     "colors = sns.color_palette(\"husl\", 3)\n",
     "\n",
-    "# Crear una gráfica separada para cada tratamiento\n",
     "for i, (tratamiento, color) in enumerate(zip(['Tratamiento 1', 'Tratamiento 2', 'Tratamiento 3'], colors)):\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    sns.scatterplot(\n",
@@ -287,7 +262,7 @@
     "        y=predicciones[:, i],\n",
     "        color=color,\n",
     "        alpha=0.7,\n",
-    "        s=50  # Tamaño de los puntos\n",
+    "        s=50\n",
     "    )\n",
     "    plt.plot(\n",
     "        [y_test.iloc[:, i].min(), y_test.iloc[:, i].max()],\n",
@@ -301,17 +276,13 @@
     "    plt.ylabel('Predicción', fontsize=14)\n",
     "    plt.xticks(fontsize=12)\n",
     "    plt.yticks(fontsize=12)\n",
-    "\n",
-    "    # Mostrar la gráfica\n",
     "    plt.tight_layout()\n",
     "    plt.show()\n",
     "\n",
-    "# Asignar las predicciones al DataFrame original\n",
     "df['PREDICCION_DEMANDA_TRATAMIENTO_1'] = model.predict(X_processed)[:, 0]\n",
     "df['PREDICCION_DEMANDA_TRATAMIENTO_2'] = model.predict(X_processed)[:, 1]\n",
     "df['PREDICCION_DEMANDA_TRATAMIENTO_3'] = model.predict(X_processed)[:, 2]\n",
     "\n",
-    "# Insertar resultados en la base de datos en lotes de 10,000\n",
     "batch_size = 10000\n",
     "data_to_insert = [\n",
     "    (\n",
@@ -332,7 +303,6 @@
     "    cursor.executemany(insert_query, batch)\n",
     "    conn.commit()\n",
     "\n",
-    "# Cerrar la conexión\n",
     "cursor.close()\n",
     "conn.close()\n"
    ]
